--- a/src/pages/ContentGeneration/GenerateCalendarSeoIdeas.css
+++ b/src/pages/ContentGeneration/GenerateCalendarSeoIdeas.css
@@ -91,6 +91,11 @@
   transition: all 0.3s ease !important;
 }
 
+
+.react-calendar__month-view__days__day--neighboringMonth {
+  color: #ccc !important;
+}
+
 .react-calendar__navigation button:disabled {
   background: #e2e8f0 !important;
 }
@@ -106,6 +111,7 @@
   padding: 8px !important;
   border: 1px solid #e2e8f0 !important;
   background: white !important;
+  color: black;
   position: relative !important;
   transition: all 0.3s ease !important;
 }
