--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -1,8 +1,9 @@
 /* Table Styling */
 .posts-table {
-  width: 100%;
+  width: 90%;
   border-collapse: collapse;
   margin-top: 20px;
+  margin: auto;
 }
 
 .posts-table th,
